--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -956,7 +956,7 @@ main {
   100% { transform: scale(1); }
 }
 
-.project-item > a { width: 100%; }
+.project-container { width: 100%; }
 
 .project-img {
   position: relative;
@@ -979,7 +979,7 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item > a:hover .project-img::before { background: hsla(0, 0%, 0%, 0.5); }
+.project-container:hover .project-img::before { background: hsla(0, 0%, 0%, 0.5); }
 
 .project-icon-container{
   display: flex;
@@ -1011,7 +1011,7 @@ main {
   
 }
 
-.project-item > a:hover .project-item-icon-box {
+.project-container:hover .project-item-icon-box {
   --scale: 1;
   opacity: 1;
 }
@@ -1025,7 +1025,7 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item > a:hover img { transform: scale(1.1); }
+.project-container:hover img { transform: scale(1.1); }
 
 .project-title,
 .project-category { margin-left: 10px; }
