--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,6 +363,7 @@ main {
   font-weight: var(--fw-500);
   letter-spacing: -0.25px;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .info-content .title {
@@ -373,6 +374,64 @@ main {
   width: max-content;
   padding: 3px 12px;
   border-radius: 8px;
+}
+
+.info-content .title-yellow {
+  background: var(--bittersweet-shimmer);
+  color: var(--white-1);
+  font-size: var(--fs-8);
+  font-weight: var(--fw-300);
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+}
+
+.info-content .title-onyx {
+  background: var(--text-gradient-yellow);
+  color: var(--eerie-black-1);
+  font-size: var(--fs-8);
+  font-weight: var(--fw-300);
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+}
+
+.info-content .title-grey {
+  background: #FFDCDC;
+  color: var(--eerie-black-1);
+  font-size: var(--fs-8);
+  font-weight: var(--fw-300);
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+}
+
+.info-content .title-red {
+  background: #732255;
+  color: var(--white-1);
+  font-size: var(--fs-8);
+  font-weight: var(--fw-300);
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+}
+
+.info-content .title-jet {
+  background: var(--jet);
+  color: var(--white-1);
+  font-size: var(--fs-8);
+  font-weight: var(--fw-300);
+  width: max-content;
+  padding: 3px 12px;
+  border-radius: 8px;
+}
+
+.info-content .title-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  row-gap: 10px;
 }
 
 .info_more-btn {
@@ -638,7 +697,7 @@ main {
   border-radius: 12px;
   padding: 1rem;
   width: 100%;
-  aspect-ratio: 1 / 1; 
+  aspect-ratio: 1 / 1;
   text-align: center;
   box-shadow: var(--shadow-1);
   transition: transform var(--transition-1);
@@ -973,6 +1032,14 @@ main {
   font-size: var(--fs-6);
   line-height: 1.3;
   margin-bottom: 7px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.timeline-item-title > a > ion-icon {
+  color: var(--vegas-gold);
+  font-size: 8px;
 }
 
 .timeline-list span {
@@ -2255,9 +2322,9 @@ textarea.form-input::-webkit-resizer {
     text-align: center;
   }
 
-  .info-content .title {
+  /* .info-content .title {
     margin: auto;
-  }
+  } */
 
   .info_more-btn {
     display: none;
